--- a/NaviBar/app/src/main/res/layout/activity_event.xml
+++ b/NaviBar/app/src/main/res/layout/activity_event.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#ff9f8e"
     tools:context=".explore.EventActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -94,12 +95,6 @@
                         android:padding="12dp"
                         android:layout_height="wrap_content">
 
-                        <ImageView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:src="@drawable/ic_clock"
-                            android:layout_gravity="center_vertical"/>
 
                         <TextView
                             android:id="@+id/tvEventTime"
@@ -148,12 +143,6 @@
                         android:padding="12dp"
                         android:layout_height="wrap_content">
 
-                        <ImageView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:src="@drawable/ic_artist_name"
-                            android:layout_gravity="center_vertical"/>
 
                         <TextView
                             android:layout_width="0dp"
@@ -258,7 +247,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="15dp"
-        android:src="@drawable/ic_add"
+        android:src="@drawable/ic_event_card_add"
         app:backgroundTint="@color/red"
         app:elevation="8dp"
         app:layout_anchor="@id/app_bar_layout"
