--- a/NaviBar/app/src/main/res/layout/activity_main.xml
+++ b/NaviBar/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:itemBackground="@color/red"
+        app:itemBackground="@color/darkred"
         app:itemTextColor="@drawable/navi_bar_colors"
         app:itemIconTint="@drawable/navi_bar_colors"
         app:menu="@menu/navigation" />
@@ -33,15 +33,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
-
-
-        <!--<RelativeLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="bottom">-->
-
-
-        <!--</RelativeLayout>-->
 
 
     </FrameLayout>
