--- a/NaviBar/app/src/main/res/layout/event_card.xml
+++ b/NaviBar/app/src/main/res/layout/event_card.xml
@@ -8,79 +8,140 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:cardCornerRadius="15dp"
-        android:background="@color/red"
+        app:cardCornerRadius="10dp"
         >
 
         <FrameLayout
             android:id="@+id/event_card_highlight"
             android:visibility="invisible"
-            android:background="#FF0000"
-            android:layout_width="6dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"/>
+
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/event_border"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/event_card_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:fontFamily="@font/lato_light"
+                android:layout_margin="10dp"
+                android:fontFamily="@font/lato_bold"
                 android:text="Performance"
-                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:textSize="24sp"
                 android:typeface="normal" />
 
-            <TextView
-                android:id="@+id/event_card_date"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="5th Friday"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_marginRight="15dp"
-                android:layout_marginBottom="15dp"
-                android:layout_marginLeft="15dp"
-                android:id="@+id/event_card_time"
-                android:text="1:00pm - 3:00 pm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="10dp">
 
             <TextView
-                android:id="@+id/event_card_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="Reference Room"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:id="@+id/month"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
+                android:paddingLeft="23dp"
+                android:paddingRight="23dp"
+                android:textSize="15sp"
+                android:fontFamily="@font/lato_bold"
+                android:textColor="@color/white"
+                android:background="#ff0000"
+                android:text="OCT"
+                />
 
-            <TextView
-                android:id="@+id/event_card_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:text="George Sherman Building, 775 Commonwealth Ave., MA, 02134"
-                android:textStyle="italic" />
+                <TextView
+                    android:id="@+id/event_card_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="30dp"
+                    android:paddingTop="6dp"
+                    android:textAlignment="center"
+                    android:paddingBottom="9dp"
+                    android:text="5"
+                    android:textColor="#000000"
+                    android:background="@color/white"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginBottom="15dp">
+
+                    <TextView
+                        android:id="@+id/event_card_location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Reference Room"
+                        android:textColor="@color/white"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/event_card_time"
+                    android:text="1:00pm - 3:00 pm"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/lato"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+
+
+                <TextView
+                    android:id="@+id/event_card_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/lato"
+                    android:text="George Sherman Building, 775 Commonwealth Ave., MA, 02134"
+                    android:textStyle="italic" />
+
+                </LinearLayout>
+
+
+
+
+
+        </LinearLayout>
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/lightRed"
-                android:elevation="4dp"
+                android:elevation="1dp"
                 android:orientation="horizontal">
 
                 <ImageButton
                     android:id="@+id/event_card_add_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:layout_margin="10dp"
+                    android:scaleType="fitCenter"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/ic_event_card_add" />
@@ -88,9 +149,10 @@
                 <ImageButton
                     android:id="@+id/event_card_like_button"
 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:layout_margin="10dp"
+                    android:scaleType="fitCenter"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/ic_event_card_like" />
@@ -98,9 +160,10 @@
                 <ImageButton
                     android:id="@+id/event_card_share_button"
 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:layout_margin="10dp"
+                    android:scaleType="fitCenter"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/ic_share" />
@@ -108,9 +171,10 @@
                 <ImageButton
                     android:id="@+id/event_card_location_button"
 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:layout_margin="10dp"
+                    android:scaleType="fitCenter"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/ic_location" />
@@ -123,11 +187,16 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:fontFamily="@font/lato_italic"
+                android:textColor="@color/white"
                 android:text="Workshop description goes there. This is the best-ever workshop BU holds. Come and see fantastic artists perform amazing art shows. Join in our BU Global Music Festival!"
                 android:textSize="18sp"
                 android:typeface="serif" />
 
+
         </LinearLayout>
+
+
+
 
     </android.support.v7.widget.CardView>
 
