--- a/NaviBar/app/src/main/res/values/colors.xml
+++ b/NaviBar/app/src/main/res/values/colors.xml
@@ -3,10 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="lightRed">#F4B0B0</color>
-    <color name="red">#fa6f57</color>
-    <color name="titleBarBkg">#fa6f57</color>
-    <color name="darkRed">#B71C1C</color>
+    <color name="lightRed">#ffbbaf</color>
+    <color name="red">#FF9F8E</color>
+    <color name="darkred">#FA6F57</color>
     <color name="white">#FFFFFF</color>
     <color name="colorPrimaryText">#050505</color>
 </resources>
