--- a/NaviBar/app/src/main/res/layout/activity_main.xml
+++ b/NaviBar/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
     android:layout_height="match_parent"
     tools:context="com.cs591.mooncake.MainActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn1"/>
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
