--- a/NaviBar/app/src/main/res/layout/event_card.xml
+++ b/NaviBar/app/src/main/res/layout/event_card.xml
@@ -14,7 +14,8 @@
         <FrameLayout
             android:id="@+id/event_card_highlight"
             android:visibility="invisible"
-            android:layout_width="0dp"
+            android:layout_width="6dp"
+            android:background="#ff0000"
             android:layout_height="match_parent"/>
 
 
@@ -22,7 +23,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/event_border"
             android:orientation="vertical">
 
             <TextView
@@ -32,7 +32,6 @@
                 android:layout_margin="10dp"
                 android:fontFamily="@font/lato_bold"
                 android:text="Performance"
-                android:textColor="@color/white"
                 android:textSize="24sp"
                 android:typeface="normal" />
 
@@ -41,45 +40,50 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <LinearLayout
+                <android.support.v7.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="10dp">
+                    app:cardElevation="5dp"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_margin="15dp">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/month"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                android:paddingLeft="23dp"
-                android:paddingRight="23dp"
-                android:textSize="15sp"
-                android:fontFamily="@font/lato_bold"
-                android:textColor="@color/white"
-                android:background="#ff0000"
-                android:text="OCT"
-                />
+                        <TextView
+                            android:elevation="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/month"
+                            android:paddingTop="4dp"
+                            android:paddingBottom="4dp"
+                            android:paddingLeft="23dp"
+                            android:paddingRight="23dp"
+                            android:textSize="15sp"
+                            android:fontFamily="@font/lato_bold"
+                            android:textColor="@color/white"
+                            android:background="#ff0000"
+                            android:text="OCT"
+                            />
 
-                <TextView
-                    android:id="@+id/event_card_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="30dp"
-                    android:paddingRight="30dp"
-                    android:paddingTop="6dp"
-                    android:textAlignment="center"
-                    android:paddingBottom="9dp"
-                    android:text="5"
-                    android:textColor="#000000"
-                    android:background="@color/white"
-                    android:textSize="30sp"
-                    android:textStyle="bold" />
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/event_card_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="30dp"
+                            android:paddingRight="30dp"
+                            android:paddingTop="6dp"
+                            android:textAlignment="center"
+                            android:paddingBottom="9dp"
+                            android:elevation="8dp"
+                            android:text="5"
+                            android:background="#fff"
+                            android:textSize="30sp"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -93,14 +97,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Reference Room"
-                        android:textColor="@color/white"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/event_card_time"
                     android:text="1:00pm - 3:00 pm"
-                    android:textColor="@color/white"
                     android:fontFamily="@font/lato"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
@@ -114,7 +116,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="15dp"
-                    android:textColor="@color/white"
                     android:fontFamily="@font/lato"
                     android:text="George Sherman Building, 775 Commonwealth Ave., MA, 02134"
                     android:textStyle="italic" />
@@ -187,7 +188,6 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:fontFamily="@font/lato_italic"
-                android:textColor="@color/white"
                 android:text="Workshop description goes there. This is the best-ever workshop BU holds. Come and see fantastic artists perform amazing art shows. Join in our BU Global Music Festival!"
                 android:textSize="18sp"
                 android:typeface="serif" />
