--- a/NaviBar/app/src/main/res/layout/event_card.xml
+++ b/NaviBar/app/src/main/res/layout/event_card.xml
@@ -44,6 +44,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:cardElevation="5dp"
+                    app:cardCornerRadius="5dp"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_margin="15dp">
                     <LinearLayout
