--- a/NaviBar/app/src/main/res/layout/horizontal.xml
+++ b/NaviBar/app/src/main/res/layout/horizontal.xml
@@ -40,6 +40,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/inner_recyclerView"
+        android:scrollbars="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
