--- a/NaviBar/app/src/main/res/layout/fragment_like.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_like.xml
@@ -37,6 +37,7 @@
             android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scrollbars="vertical"
 
             ></android.support.v7.widget.RecyclerView>
 
