--- a/NaviBar/app/src/main/res/values/colors.xml
+++ b/NaviBar/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="lightRed">#ffbbaf</color>
-    <color name="red">#FF9F8E</color>
+    <color name="red">#ff9f8e</color>
     <color name="darkred">#FA6F57</color>
     <color name="white">#FFFFFF</color>
     <color name="colorPrimaryText">#050505</color>
