--- a/NaviBar/app/src/main/res/layout/horizental_single_row.xml
+++ b/NaviBar/app/src/main/res/layout/horizental_single_row.xml
@@ -5,6 +5,7 @@
     android:layout_height="320dp"
     android:layout_margin="5dp"
     android:background="#FFFFFF"
+    android:stateListAnimator="@animator/card_view_ontouch"
     android:orientation="vertical"
     android:padding="5dp"
     app:cardCornerRadius="15dp"
