--- a/NaviBar/app/src/main/res/layout/activity_login.xml
+++ b/NaviBar/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="52dp"
+            android:stateListAnimator="@animator/card_view_ontouch"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -80,7 +81,7 @@
             android:text="@string/googlelogin"
             android:textAlignment="viewStart"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@drawable/btn_guest_login_txt_color"
             android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@+id/fb"
             app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +105,7 @@
             android:text="@string/twitterlogin"
             android:textAlignment="viewStart"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@drawable/btn_guest_login_txt_color"
             android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@+id/btnGuestLogin"
             app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +140,7 @@
             android:text="@string/facebooklogin"
             android:textAlignment="viewStart"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@drawable/btn_guest_login_txt_color"
             android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@+id/twitter"
             app:layout_constraintEnd_toEndOf="parent"
@@ -157,7 +158,7 @@
             android:textAlignment="viewStart"
             android:paddingLeft="80dp"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@drawable/btn_guest_login_txt_color"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
