--- a/NaviBar/app/src/main/res/layout/description_card.xml
+++ b/NaviBar/app/src/main/res/layout/description_card.xml
@@ -37,6 +37,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_margin="8dp"
+                    android:stateListAnimator="@animator/card_view_ontouch"
                     app:cardCornerRadius="10dp"
                     app:cardElevation="4dp">
 
