--- a/NaviBar/app/src/main/res/layout/rv_like_items.xml
+++ b/NaviBar/app/src/main/res/layout/rv_like_items.xml
@@ -5,6 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_margin="10dp"
     android:layout_height="wrap_content"
+    android:stateListAnimator="@animator/card_view_ontouch"
     app:cardCornerRadius="11dp">
 
     <LinearLayout
