--- a/NaviBar/app/src/main/res/layout/activity_about_page.xml
+++ b/NaviBar/app/src/main/res/layout/activity_about_page.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:elevation="0dp"
-    android:background="#2a3143">
+    android:background="@color/darkblue">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_about_layout"
@@ -31,8 +31,9 @@
                 android:layout_height="wrap_content"
                 app:layout_collapseMode="parallax"
                 android:layout_margin="80dp"
-                android:textColor="#ffffff"
+                android:textColor="@color/white"
                 android:padding="10dp"
+                android:fontFamily="@font/lato"
                 android:background="@drawable/rectangle"
                 android:text="@string/aboutheader"
                 android:textAlignment="center" />
@@ -69,8 +70,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/missiontitle"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 android:textSize="30dp"
+                android:fontFamily="@font/lato"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="20dp"
                 android:textStyle="bold"
@@ -82,9 +84,10 @@
                 android:layout_marginBottom="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
+                android:fontFamily="@font/lato"
                 android:text="@string/mission"
                 android:textAlignment="viewStart"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 android:textSize="16dp" />
 
             <ImageView
@@ -103,8 +106,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 android:textSize="30dp"
+                android:fontFamily="@font/lato"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="20dp"
                 android:textStyle="bold"
@@ -115,9 +119,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
+                android:fontFamily="@font/lato"
                 android:text="@string/BUArts"
                 android:textAlignment="gravity"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 android:textSize="16dp"
                 />
 
@@ -139,8 +144,9 @@
                 android:layout_marginBottom="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
+                android:fontFamily="@font/lato"
                 android:text="@string/member"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 android:textSize="30dp"
                 android:textStyle="bold"/>
 
