--- a/NaviBar/app/src/main/res/layout/bazaar.xml
+++ b/NaviBar/app/src/main/res/layout/bazaar.xml
@@ -12,8 +12,9 @@
         android:text="Artists"
         android:textStyle="bold"
         android:gravity="bottom"
-        android:textColor="#ff9f8e"
+        android:textColor="@color/red"
         android:textSize="30sp"
+        android:fontFamily="@font/lato"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"/>
     <android.support.v7.widget.CardView
@@ -24,7 +25,7 @@
         android:stateListAnimator="@animator/card_view_ontouch"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="#FFFFFF"
+        android:background="@color/white"
         android:elevation="5dp"
         android:orientation="vertical"
         android:padding="5dp"
@@ -33,7 +34,7 @@
         app:cardMaxElevation="8dp">
 
         <LinearLayout
-            android:background="#ff9f8e"
+            android:background="@color/red"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -57,7 +58,8 @@
                     android:layout_gravity="bottom"
                     android:layout_margin="5dp"
                     android:text="Title"
-                    android:textColor="#fff"
+                    android:fontFamily="@font/lato"
+                    android:textColor="@color/white"
                     android:textSize="28sp" />
 
                 <View
@@ -78,6 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_weight="1"
+                    android:fontFamily="@font/lato"
                     android:gravity="center_vertical"
                     android:text="This is the description"
                     android:textColor="@color/white"
@@ -90,6 +93,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_weight="1"
+                    android:fontFamily="@font/lato"
                     android:text="2018/10/10"
                     android:textColor="@color/white" />
 
