--- a/NaviBar/app/src/main/res/layout/event_card.xml
+++ b/NaviBar/app/src/main/res/layout/event_card.xml
@@ -15,7 +15,7 @@
             android:id="@+id/event_card_highlight"
             android:visibility="invisible"
             android:layout_width="6dp"
-            android:background="#ff0000"
+            android:background="@color/realRed"
             android:layout_height="match_parent"/>
 
 
@@ -64,7 +64,7 @@
                             android:textSize="15sp"
                             android:fontFamily="@font/lato_bold"
                             android:textColor="@color/white"
-                            android:background="#ff0000"
+                            android:background="@color/realRed"
                             android:text="OCT"
                             />
 
@@ -79,7 +79,8 @@
                             android:paddingBottom="9dp"
                             android:elevation="8dp"
                             android:text="5"
-                            android:background="#fff"
+                            android:fontFamily="@font/lato"
+                            android:background="@color/white"
                             android:textSize="30sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -99,6 +100,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Reference Room"
+                        android:fontFamily="@font/lato"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
