--- a/NaviBar/app/src/main/res/layout/fragment_map_info_window.xml
+++ b/NaviBar/app/src/main/res/layout/fragment_map_info_window.xml
@@ -15,7 +15,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textColor="#000"
+            android:textColor="@color/black"
+            android:fontFamily="@font/lato"
             android:textStyle="bold"
             android:maxLines="1"
             android:textSize="14sp"
@@ -25,7 +26,8 @@
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000"
+            android:fontFamily="@font/lato"
+            android:textColor="@color/black"
             android:textSize="14sp"
             />
     </LinearLayout>
