--- a/NaviBar/app/src/main/res/layout/vertical_single_row.xml
+++ b/NaviBar/app/src/main/res/layout/vertical_single_row.xml
@@ -6,7 +6,7 @@
     android:layout_margin="4dp"
     android:background="@drawable/list_rounded_corner"
     app:cardCornerRadius="6dp"
-    app:cardBackgroundColor="#ff9f8e"
+    app:cardBackgroundColor="@color/red"
     android:stateListAnimator="@animator/card_view_ontouch"
     android:orientation="horizontal">
 
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/title"
                 android:textStyle="bold"
+                android:fontFamily="@font/lato_bold"
                 android:textSize="18dp"
                 android:textColor="@color/white"
                 android:text="Title"/>
@@ -43,6 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/description"
+                android:fontFamily="@font/lato"
                 android:textColor="@color/white"
                 android:text="This is description"/>
 
