--- a/NaviBar/app/src/main/res/values/colors.xml
+++ b/NaviBar/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="darkred">#FA6F57</color>
     <color name="white">#FFFFFF</color>
     <color name="colorPrimaryText">#050505</color>
+    <color name="darkblue">#2a3143</color>
+    <color name="textgrey">#4c4b4b</color>
+    <color name="black">#111111</color>
+    <color name="realRed">#ff0000</color>
 </resources>
