--- a/NaviBar/app/src/main/res/layout/rv_schedule_items.xml
+++ b/NaviBar/app/src/main/res/layout/rv_schedule_items.xml
@@ -19,16 +19,20 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:layout_margin="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:layout_alignParentLeft="true"
             android:id="@+id/item_type"
             android:background="@drawable/bazzar"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginRight="55dp"
         android:layout_toRightOf="@+id/item_type"
         android:orientation="vertical"
         >
