update font of login

--- a/NaviBar/app/src/main/res/layout/activity_login.xml
+++ b/NaviBar/app/src/main/res/layout/activity_login.xml
@@ -83,7 +83,7 @@
             android:textAllCaps="false"
             android:textColor="@drawable/btn_guest_login_txt_color"
             android:textSize="15sp"
-            android:fontFamily="@font/lato"
+            android:fontFamily="@font/lato_bold"
             app:layout_constraintBottom_toTopOf="@+id/fb"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +108,7 @@
             android:textAllCaps="false"
             android:textColor="@drawable/btn_guest_login_txt_color"
             android:textSize="15sp"
-            android:fontFamily="@font/lato"
+            android:fontFamily="@font/lato_bold"
             app:layout_constraintBottom_toTopOf="@+id/btnGuestLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -144,7 +144,7 @@
             android:textAllCaps="false"
             android:textColor="@drawable/btn_guest_login_txt_color"
             android:textSize="15sp"
-            android:fontFamily="@font/lato"
+            android:fontFamily="@font/lato_bold"
             app:layout_constraintBottom_toTopOf="@+id/twitter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -163,7 +163,7 @@
             android:textAllCaps="false"
             android:textColor="@drawable/btn_guest_login_txt_color"
             android:textSize="15sp"
-            android:fontFamily="@font/lato"
+            android:fontFamily="@font/lato_bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
